# Aether

./: .env.example  .gitignore  Cargo.toml  Dockerfile.app.local  Dockerfile.app.release-local  README.md  deploy.sh  docker-compose.single-node.yml  docker-compose.yml  install.sh
apps/aether-gateway/: Cargo.toml  build.rs
apps/aether-gateway/src/: allocator_metrics.rs  client_session_affinity.rs  clock.rs  constants.rs  error.rs  fallback_metrics.rs  frontdoor_loop_guard.rs  headers.rs  image_capabilities.rs  lib.rs  log_ids.rs  main.rs  process_metrics.rs  provider_key_auth.rs  provider_pool_demand.rs  rate_limit.rs  request_candidate_queue.rs  request_candidate_runtime.rs  request_diagnostics.rs  stage_metrics.rs  system_features.rs  testkit.rs  tokio_metrics.rs  upstream_admission.rs
apps/aether-gateway/src/ai_serving/: api.rs  mod.rs  transport.rs
apps/aether-gateway/src/api/: core.rs
apps/aether-gateway/src/async_task/: runtime.rs
apps/aether-gateway/src/backup/: config.rs  executor.rs  store.rs  task.rs  worker.rs
apps/aether-gateway/src/cache/: auth_context.rs  auth_runtime.rs  candidate_page.rs  mod.rs  system_config.rs
apps/aether-gateway/src/control/: management_token_permissions.rs  mod.rs  public.rs
apps/aether-gateway/src/data/: candidate_selection.rs  candidates.rs  config.rs  tests.rs
apps/aether-gateway/src/dispatch/: pool_scheduler.rs  refs.rs
apps/aether-gateway/src/execution_runtime/: chatgpt_web_image.rs  constants.rs  fallback.rs  grok.rs  kiro_cache.rs  kiro_web_search.rs  mod.rs  ndjson.rs  oauth_retry.rs  response_header_rules.rs  server.rs  stream_pump.rs  submission.rs  tests.rs  transport.rs  windsurf.rs
apps/aether-gateway/src/executor/: candidate_loop.rs  mod.rs  orchestration.rs  outcome.rs  stream_path.rs
apps/aether-gateway/src/maintenance/: mod.rs  runtime.rs
apps/aether-gateway/src/middleware/: access_log.rs  mod.rs
apps/aether-gateway/src/model_fetch/: mod.rs  runtime.rs  tests.rs
apps/aether-gateway/src/oauth/: identity_repo.rs
apps/aether-gateway/src/orchestration/: attempt.rs  classifier.rs  effects.rs  health.rs  mod.rs  policy.rs  recovery.rs  report_effects.rs
apps/aether-gateway/src/privacy/: mod.rs
apps/aether-gateway/src/routing/: mod.rs  mutations.rs  resolver.rs  selection.rs  trace.rs
apps/aether-gateway/src/state/: app.rs  cache.rs  catalog.rs  core.rs  integrations.rs  mod.rs  oauth.rs  routing_profiles.rs  testing.rs  types.rs
apps/aether-gateway/src/task_runtime/: mod.rs
apps/aether-gateway/src/tests/: async_task.rs  audit.rs  concurrency.rs  frontdoor.rs  proxy.rs  usage.rs
apps/aether-gateway/src/tunnel/: mod.rs
apps/aether-gateway/src/usage/: mod.rs
apps/aether-gateway/src/wallet_runtime/: access.rs  mod.rs  quota.rs
apps/aether-tunnel/: .env.example  Cargo.toml  README.md  install.ps1  install.sh
apps/aether-tunnel/src/: app.rs  config.rs  egress_proxy.rs  upstream_client.rs
apps/aether-tunnel/src/tunnel/: client.rs  dispatcher.rs  mod.rs  protocol.rs  stream_handler.rs  writer.rs
crates/aether-admin/: Cargo.toml
crates/aether-admin/src/: system.rs
crates/aether-admin/src/observability/: monitoring.rs  stats.rs  usage.rs
crates/aether-admin/src/provider/: endpoints.rs  models.rs  pool.rs  quota.rs  state.rs  status.rs
crates/aether-ai/formats/: Cargo.toml
crates/aether-ai/formats/src/: api.rs  lib.rs
crates/aether-ai/serving/: Cargo.toml
crates/aether-ai/serving/src/: attempt_loop.rs  attempt_plan.rs  candidate_materialization.rs  candidate_metadata.rs  candidate_persistence.rs  candidate_persistence_policy.rs  candidate_preparation.rs  candidate_preselection.rs  candidate_ranking.rs  candidate_resolution.rs  decision_input.rs  decision_path.rs  decision_payload.rs  dto.rs  execution_path.rs  failure_diagnostic.rs  plan_payload.rs  ports.rs  ranking_metadata.rs  report_context.rs  request_body_diagnostics.rs  runtime_miss.rs  surface_spec.rs
crates/aether-data/: Cargo.toml
crates/aether-data/adapters/mysql/: Cargo.toml
crates/aether-data/adapters/postgres/: Cargo.toml
crates/aether-data/adapters/sqlite/: Cargo.toml
crates/aether-data/backfills/postgres/: 20260517012000_sync_legacy_enabled_active_flags.sql
crates/aether-data/contracts/: Cargo.toml
crates/aether-data/contracts/src/: database.rs  error.rs  lib.rs  migration.rs
crates/aether-data/migrations/mysql/: 20260403000000_baseline.sql  20260516000000_add_routing_profiles.sql  20260520010000_preserve_usage_provider_identity.sql  20260524000000_add_scheduler_hotspot_indexes.sql
crates/aether-data/migrations/postgres/: 20260403000000_baseline.sql  20260516000000_add_routing_profiles.sql  20260518000000_add_usage_counter_deltas.sql  20260519130000_add_provider_api_key_default_pool_sort_index.sql  20260520010000_preserve_usage_provider_identity.sql  20260524000000_add_scheduler_hotspot_indexes.sql  20260528000000_normalize_endpoint_api_roots.sql  20260528020000_add_gateway_pressure_indexes.sql
crates/aether-data/query/: Cargo.toml
crates/aether-data/query/src/: lib.rs
crates/aether-data/runtime/: Cargo.toml  README.md  build.rs
crates/aether-data/schema/: Cargo.toml
crates/aether-data/src/: lib.rs  maintenance.rs
crates/aether-gateway/execution/: Cargo.toml
crates/aether-gateway/frontdoor/: Cargo.toml
crates/aether-gateway/tunnel/: Cargo.toml
crates/aether-gateway/workers/: Cargo.toml
crates/aether-provider/pool/: Cargo.toml
crates/aether-provider/transport/: Cargo.toml
crates/aether-routing-core/: Cargo.toml
crates/aether-routing-core/src/: actions.rs  conditions.rs  lib.rs  model.rs  mutations.rs  policy.rs  ranking.rs  trace.rs  validation.rs
crates/aether-runtime/base/: Cargo.toml
crates/aether-runtime/state/: Cargo.toml
crates/aether-task/runtime/: Cargo.toml
crates/aether-testing/integration/: Cargo.toml
crates/aether-testing/loadtools/: Cargo.toml
crates/aether-testing/testkit/: Cargo.toml
crates/aether-testkit/: Cargo.toml
crates/aether-testkit/src/: load.rs  metrics.rs
crates/aether-usage/runtime/: Cargo.toml
(+1771 files in other folders)
