[package]
name = "aether-gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust ingress gateway for Aether phase 3a transparent proxy"

[dependencies]
aether-admin.workspace = true
aether-ai-formats.workspace = true
aether-ai-serving.workspace = true
aether-billing.workspace = true
aether-cache.workspace = true
aether-contracts.workspace = true
aether-crypto.workspace = true
aether-data.workspace = true
aether-data-contracts.workspace = true
aether-dispatch-core.workspace = true
aether-http.workspace = true
aether-model-fetch.workspace = true
aether-oauth.workspace = true
aether-pool-core.workspace = true
aether-provider-pool.workspace = true
aether-provider-transport.workspace = true
aether-routing-core.workspace = true
aether-scheduler-core.workspace = true
aether-runtime.workspace = true
aether-runtime-state.workspace = true
aether-task-runtime.workspace = true
aether-usage-runtime.workspace = true
aether-video-tasks-core.workspace = true
aether-wallet.workspace = true
async-stream.workspace = true
async-trait.workspace = true
axum = { version = "0.8", features = ["ws"] }
base64.workspace = true
bcrypt.workspace = true
bytes.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
flate2.workspace = true
futures-util.workspace = true
hmac.workspace = true
http.workspace = true
ldap3 = { version = "0.11", default-features = false, features = ["sync", "tls-rustls"] }
md-5 = "0.10"
parking_lot = "0.12"
regex.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1 = "0.10"
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "compression-gzip", "set-header"] }
tracing.workspace = true
url.workspace = true
uuid.workspace = true
webpki-roots.workspace = true
wreq.workspace = true
wreq-util.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
aether-testkit.workspace = true
tracing-subscriber.workspace = true
