[package]
name = "aether-data"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared data access contracts and config for Aether Rust services"
build = "build.rs"

[dependencies]
aether-ai-formats.workspace = true
aether-data-contracts.workspace = true
aether-cache.workspace = true
aether-data-query.workspace = true
aether-wallet.workspace = true
async-trait.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
futures-util.workspace = true
flate2.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx = { workspace = true, features = ["migrate", "macros"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
