[package]
name = "aether-routing-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure routing profile policy, mutation, ranking overlay, and trace primitives for Aether"

[dependencies]
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
