[package]
name = "aether-testkit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared integration test helpers for Aether Rust services"

[dependencies]
async-stream.workspace = true
aether-data.workspace = true
aether-data-contracts.workspace = true
aether-contracts.workspace = true
aether-gateway = { workspace = true, features = ["testkit"] }
aether-http.workspace = true
aether-runtime.workspace = true
aether-runtime-state.workspace = true
axum.workspace = true
bytes.workspace = true
http.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
libc = "0.2"
sysinfo = "0.32"
tokio.workspace = true
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
