[package]
name = "aether-ai-formats"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure AI API format, surface, planning, and finalize logic for Aether"

[dependencies]
aether-contracts.workspace = true
base64.workspace = true
http.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1 = "0.10"
sha2.workspace = true
url.workspace = true
uuid.workspace = true
