[package]
name = "aether-ai-serving"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AI serving application contracts and ports for Aether"

[dependencies]
aether-ai-formats.workspace = true
aether-contracts.workspace = true
aether-data-contracts.workspace = true
aether-pool-core.workspace = true
aether-scheduler-core.workspace = true
async-trait.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true

[dev-dependencies]
tokio.workspace = true
