[package]
name = "aether-data-contracts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared data contracts and repository traits for Aether Rust services"

[dependencies]
aether-ai-formats.workspace = true
aether-routing-core.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
