[package]
name = "aether-data-query"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Small SQL dialect helpers for Aether data repositories"

[dependencies]
sqlx.workspace = true

[dev-dependencies]
sqlx = { workspace = true, features = ["mysql", "postgres", "sqlite"] }
