[package]
name = "aether-data-schema"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Logical schema parser and SQL generator for Aether data storage"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
toml = "0.8"
