[package]
name = "aether-gateway-execution"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Gateway execution lifecycle and stream framing components"

[dependencies]
aether-contracts.workspace = true
bytes.workspace = true
serde_json.workspace = true
