[package]
name = "aether-gateway-frontdoor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP frontdoor middleware and request lifecycle primitives for Aether gateway"

[dependencies]
aether-ai-formats.workspace = true
axum.workspace = true
bytes.workspace = true
http.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
futures-util.workspace = true
serde_json.workspace = true
tower = { version = "0.5", features = ["util"] }
tracing-subscriber.workspace = true
