[package]
name = "aether-gateway-tunnel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared tunnel protocol, admission, relay, and connection contracts"

[dependencies]
aether-admission-core.workspace = true
aether-contracts.workspace = true
base64.workspace = true
bytes.workspace = true
http.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
