[package]
name = "aether-provider-transport"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Provider transport core extracted from aether-gateway"

[dependencies]
aether-ai-formats.workspace = true
aether-contracts.workspace = true
aether-crypto.workspace = true
aether-data-contracts.workspace = true
aether-oauth.workspace = true
aether-runtime-state.workspace = true
aether-video-tasks-core.workspace = true
async-trait.workspace = true
base64.workspace = true
http.workspace = true
regex.workspace = true
reqwest.workspace = true
rsa = "0.9.10"
serde.workspace = true
serde_json.workspace = true
sha2 = { workspace = true, features = ["oid"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
axum = { version = "0.8", features = ["ws"] }
