[package]
name = "aether-runtime-state"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime state backends for Aether services"

[dependencies]
aether-cache.workspace = true
aether-data-contracts.workspace = true
aether-runtime.workspace = true
async-trait.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
