[package]
name = "aether-usage-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Usage runtime shared types and queue primitives extracted from aether-gateway"

[dependencies]
aether-ai-formats.workspace = true
aether-contracts.workspace = true
aether-data.workspace = true
aether-data-contracts.workspace = true
aether-runtime-state.workspace = true
async-trait.workspace = true
base64.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
